rule structure updated + engine semplification