@@ -21,34 +21,41 @@ public class GolfersProblem {
 		context.add("availableColors", "blue", "plaid", "red", "orange");
 
 		Rule uniquePos = new MVELRule("Unique positions").on("person p").when("availablePos.size() == 1").and("p.pos == 0")
-				.then("p.pos = availablePos.removeFirst(); System.out.println(p.name + ' pos = ' + p.pos);");
+				.then("p.pos = availablePos.remove(0)");
+		
 		Rule uniqueColors = new MVELRule("Unique colors").on("person p")
 				.when("availableColors.size() == 1").and("p.color == null")
-				.then("p.color = availableColors.removeFirst(); System.out.println(p.name + ' color = ' + p.color);");
+				.then("p.color = availableColors.remove(0)");
+		
 		Rule joeIsInPos2 = new MVELRule("Joe is in position 2")
 				.on("person p")
-				.when("p.name == 'Joe'").and("p.pos == 0")
-				.then("p.pos = availablePos.remove(availablePos.indexOf(2)); System.out.println('Joe pos = ' + p.pos);");
+				.when("p.name == 'Joe'")
+				.then("availablePos.remove(availablePos.indexOf(2)); p.pos = 2");
+		
 		Rule personToFredRightIsBlue = new MVELRule("Person to Fred's immediate right is wearing blue pants")
 				.on("person p1", "person p2")
-				.when("p1.name == 'Fred' && p2.pos == (p1.pos + 1) && p2.color == null")
-				.then("availableColors.remove(availableColors.indexOf('blue')); p2.color = 'blue'; System.out.println(p2.name + ' color = blue');");
+				.when("p1.name == 'Fred'").and("p2.pos == (p1.pos + 1)")
+				.then("availableColors.remove('blue'); p2.color = 'blue'");
+		
 		Rule fredNotPos4 = new MVELRule("Fred isn't in position 4")
 				.on("person p")
-				.when("p.name == 'Fred' && ($ in availablePos if $ != 4).size() == 1")
-				.then("p.pos = availablePos.remove(availablePos.indexOf(($ in availablePos if $ != 4)[0])); System.out.println(p.name + ' pos = ' + p.pos);");
+				.when("p.name == 'Fred'").and("($ in availablePos if $ != 4).size() == 1")
+				.then("p.pos = availablePos.remove(availablePos.indexOf(($ in availablePos if $ != 4)[0]))");
+		
 		Rule tomNotInPos1or4 = new MVELRule("Tom isn't in position 1 or 4")
 				.on("person p")
-				.when("p.name == 'Tom' && ($ in availablePos if $ != 4 && $ != 1).size() == 1")
-				.then("p.pos = availablePos.remove(availablePos.indexOf(($ in availablePos if $ != 4 && $ != 1)[0])); System.out.println(p.name + ' pos = ' + p.pos);");
+				.when("p.name == 'Tom'").and("($ in availablePos if $ != 4 && $ != 1).size() == 1")
+				.then("p.pos = availablePos.remove(availablePos.indexOf(($ in availablePos if $ != 4 && $ != 1)[0]))");
+		
 		Rule bobColorPlaid = new MVELRule("Bob is wearing plaid pants")
 				.on("person p")
-				.when("p.name == 'Bob' && p.color == null")
-				.then("p.color = availableColors.remove(availableColors.indexOf('plaid')); System.out.println('Bob color = ' + p.color);");
+				.when("p.name == 'Bob'")
+				.then("availableColors.remove('plaid'); p.color = 'plaid'; System.out.println('Bob color = ' + p.color)");
+		
 		Rule tomColorNotOrange = new MVELRule("Tom isn't wearing orange pants")
 				.on("person p")
-				.when("p.name == 'Tom' && ($ in availableColors if $ != 'orange').size() == 1")
-				.then("p.color = availableColors.remove(availableColors.indexOf(($ in availableColors if $ != 'orange')[0])); System.out.println(p.name + ' color = ' + p.color);");
+				.when("p.name == 'Tom'").and("($ in availableColors if $ != 'orange').size() == 1")
+				.then("p.color = availableColors.remove(availableColors.indexOf(($ in availableColors if $ != 'orange')[0]))");
 
 		RuleEngine engine = new InMemoryRuleEngine();
 		engine.add(uniquePos);
@@ -60,7 +67,14 @@ public class GolfersProblem {
 		engine.add(bobColorPlaid);
 		engine.add(tomColorNotOrange);
 
-		engine.fire(context);
+		engine.eval(context);
+		
+		System.out.println("-----------------------------------");
+		System.out.println(tom);
+		System.out.println(joe);
+		System.out.println(fred);
+		System.out.println(bob);
+		
 	}
 
 	public static class Person {
@@ -99,8 +113,9 @@ public class GolfersProblem {
 			this.color = color;
 		}
 
+		@Override
 		public String toString() {
-			return name;
+			return "Person [name=" + name + ", pos=" + pos + ", color=" + color + "]";
 		}
 
 	}
